# MELANINTRUTH

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.api.yml  docker-compose.yml  pytest.ini
melanintruth-ai/services/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
melanintruth-ai/services/api/alembic/: env.py
melanintruth-ai/services/api/alembic/versions/: 0001_initial_schema.py  0002_phase2_lifecycle_tables.py  0003_normalized_phase35_schema.py  0004_phase38_required_runtime_tables.py
melanintruth-ai/services/api/app/: main.py
melanintruth-ai/services/api/app/api/: deps.py  phase3_app.py  phase7_app.py  router.py  routes.py
melanintruth-ai/services/api/app/api/routes/: governance.py
melanintruth-ai/services/api/app/backend/: analysis.py  audit.py  auth.py  consent.py  entities.py  errors.py  governance.py  image_service.py  privacy.py  rendering.py  repository.py  security.py  vision.py
melanintruth-ai/services/api/app/core/: config.py  db.py  errors.py  security.py
melanintruth-ai/services/api/app/db/: base.py  models.py  session.py
melanintruth-ai/services/api/app/db/repositories/: sessions.py  sqlite.py  (+1 more)
melanintruth-ai/services/api/app/models/: domain.py
melanintruth-ai/services/api/app/schemas/: analysis.py  audit.py  auth.py  common.py  consent.py  governance.py  images.py  privacy.py  renders.py
melanintruth-ai/services/api/app/services/: ai.py  container.py  wiring.py
melanintruth-ai/services/api/app/tools/: export_openapi.py  verify_migration_tables.py
(+129 files in other folders)
