[project]
name = "melanintruth-api"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "sqlmodel==0.0.22",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "psycopg[binary]==3.2.3",
  "PyJWT==2.10.1",
  "passlib[bcrypt]==1.7.4",
  "httpx==0.27.2",
  "python-multipart==0.0.20",
  "numpy==2.2.1",
  "pillow==11.0.0",
  "scikit-image==0.25.0",
]
[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-asyncio==0.25.0", "ruff", "mypy", "bandit", "pip-audit"]
[tool.ruff]
line-length = 100
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
